# Lothar-Spatiotemporal-Coordinate-Parser

./: Cargo.toml  README.md
src/: converter.rs  lib.rs  main.rs
tests/: 1_lothar.txt  1_notation_pass.txt
tests/001 - Full Coordinate - Pass/: (in) notation.txt  (out) lôthar.txt
